# ShapeDetector

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/esalman17/shapedetector/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Shape.cpp  mainNative.cpp  native.cpp
app/src/main/java/com/esalman17/shapedetector/: MainActivity.java
app/src/main/jniLibs/armeabi-v7a/include/: Shape.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/esalman17/shapedetector/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
